
2010-07-14  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* setup.py regrtest.py test_support.py: The 'test' package is meant
	for Python core developers only, so do not use it anymore and
	implement our own test_support module.
	* setup.py: Workaround to a RuntimeError Python 2.7 bug when importing
	regrtest.
	* pyclewn.vim: The ':Pyclewn' command wipes out both console and
	dbgvar buffers when they exist, before starting netbeans.
	* gdb.py gdbmi.py: Map the new pyclewn command 'setfmtvar' to the
	gdb/mi command '-var-set-format'.

===============================================================================
2010-02-24  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* vim.py debugger.py: Allow pyclewn to be spawned from within vim.
	* gdb.py gdbmi.py: Switch to not buffering the output to the console,
	when gdb is closing. Do not clean up the '(clewn)_dbgvar' buffer when
	it was never used.
	* vim.py debugger.py: Allow commands in the initial buffer and on
	buffers loaded from the command line.
	* vim.py: Improve the error message when catching the exception if
	Vim cannot be spawned.
	* version-hook.py: do not run the version hook when mq patches have
	been applied.
	* debugger.py: Extend the set of available key modifiers in key
	mappings (Sergey Khorev).

===============================================================================
2009-12-31  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* vim.py gdb.py buffer.py: support vim running in a terminal.
	* debugger.py: set the 'noswapfile' option on the console vim buffer
	and the watched variables buffer.

===============================================================================
2009-12-19  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* posix.py: Fix regression test suite hangs on futex.
	* gdb.py gdbmi.py: Fix gdb 7.0 causes exception on break.
	* gdbmi.py misc.py: Fix watched array elements are displayed in