@@ -4,7 +4,7 @@ News
 Pyclewn 1.3
 -----------
 
-.. July 14, 2010
+.. July 20, 2010
 
 New feature
 ^^^^^^^^^^^
@@ -16,6 +16,8 @@ New feature
 Bug fixes
 ^^^^^^^^^
 
+* Fix pyclewn help is not available from within Vim, after installation on
+  RedHat 6.
 * The test suite fails with Python 2.7. The ``test`` package is meant for
   Python core developers only, so do not use it anymore and implement our own.
 * Workaround to a RuntimeError Python bug when installing pyclewn with
